--- a/final.ipynb
+++ b/final.ipynb
@@ -222,16 +222,16 @@
     "    #l_h, l_s, l_v, u_h, u_s, u_v, g_b, u,v\n",
     "    #lower Hue, lower Saturation, lower value, Upper Hue, Upper Saturation, Upper value, gaussian kernel size, dilation kernel size\n",
     "    while (True):\n",
-    "    result = detect(image, l_h, l_s, l_v, u_h, u_s, u_v, g_b, u,v) \n",
-    "    \n",
-    "    #display the image in the window\n",
-    "    \n",
-    "    #result[0] is the image with contours on\n",
-    "    #result[1] is the number of objects detected\n",
-    "    \n",
-    "    if(detect_function_is_pressed):\n",
-    "        #display number of objects found\n",
-    "        break\n",
+    "        result = detect(image, l_h, l_s, l_v, u_h, u_s, u_v, g_b, u,v) \n",
+    "        \n",
+    "        #display the image in the window\n",
+    "        \n",
+    "        #result[0] is the image with contours on\n",
+    "        #result[1] is the number of objects detected\n",
+    "        \n",
+    "        if(detect_function_is_pressed):\n",
+    "            #display number of objects found\n",
+    "            break\n",
     "\n",
     "#reading of image opened in opencv, as soon as an image is read, the algorithm will start\n",
     "def read_image(path):\n",
@@ -272,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +286,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "49dc9f287000ba632bbdaf059f1be695dcb90e80dd7a08661e969a22a12c7018"
+   }
   }
  },
  "nbformat": 4,
